unpackaged/main/default/objects/Tutorial_State__c/Tutorial_State__c.object-meta.xml
<CustomObject>
    <label>Tutorial State</label>
    <nameField>
        <displayFormat>TSTATE-{00000}</displayFormat>
        <label>State Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tutorial States</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>