unpackaged/main/default/objects/Tutorial_State__c/fields/State_Key__c.field-meta.xml
<CustomField>
    <fullName>State_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>State Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>