unpackaged/main/default/objects/Tutorial_State__c/fields/Tour_Key__c.field-meta.xml
<CustomField>
    <fullName>Tour_Key__c</fullName>
    <label>Tour Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>