unpackaged/main/default/objects/Tutorial_State__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tutorial States</relationshipLabel>
    <relationshipName>Tutorial_States</relationshipName>
    <type>Lookup</type>
</CustomField>