unpackaged/main/default/objects/Tutorial_State__c/fields/Version_Seen__c.field-meta.xml
<CustomField>
    <fullName>Version_Seen__c</fullName>
    <label>Version Seen</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>